--- a/Vector/Vector_01/Vector_01.vcxproj
+++ b/Vector/Vector_01/Vector_01.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3374ed0b-6191-4d6f-a9ef-21bada9627c7}</ProjectGuid>
-    <RootNamespace>List</RootNamespace>
+    <ProjectGuid>{c519a1a6-dddb-4437-9e46-90a7b5136fb4}</ProjectGuid>
+    <RootNamespace>Vector01</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -140,18 +140,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MMain.cpp" />
-    <ClCompile Include="Object.cpp" />
-    <ClCompile Include="PlayerController.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="Update.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Headers.h" />
-    <ClInclude Include="Object.h" />
-    <ClInclude Include="PlayerController.h" />
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="Update.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
